--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,21 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ background: -webkit-linear-gradient(315deg,  #ffe0e3 32%,#a7e0e5 68%);
+ background: -o-linear-gradient(315deg,  #ffe0e3 32%,#a7e0e5 68%);
+ background: linear-gradient(135deg,  #ffe0e3 32%,#a7e0e5 68%);
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas,  "Roboto", "Courier New",
+    monospace;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+button {
+  font-family: "Roboto", source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  monospace;
 }
